@@ -10,6 +10,11 @@
         </oaf_attribute>
         <oaf_attribute name="name" type="string" _value="Keyboard applet factory"/>
         <oaf_attribute name="description" type="string" _value="Keyboard applet factory"/>
+        <oaf_attribute name="bugzilla:bugzilla" type="string" value="GNOME"/>
+        <oaf_attribute name="bugzilla:product" type="string" value="gnome-applets"/>
+        <oaf_attribute name="bugzilla:component" type="string" value="keyboard indicator (gswitchit)"/>
+        <oaf_attribute name="bugzilla:version" type="string" value="@VERSION@"/>
+        <oaf_attribute name="bugzilla:other_binaries" type="string" value="gnome-keyboard-applet"/>
 
 </oaf_server>
 
@@ -25,6 +30,11 @@
         <oaf_attribute name="name" type="string" _value="Keyboard Indicator"/>
         <oaf_attribute name="description" type="string" _value="Keyboard layout indicator"/>
         <oaf_attribute name="panel:icon" type="string" value="gswitchit-applet.png"/>
+        <oaf_attribute name="bugzilla:bugzilla" type="string" value="GNOME"/>
+        <oaf_attribute name="bugzilla:product" type="string" value="gnome-applets"/>
+        <oaf_attribute name="bugzilla:component" type="string" value="keyboard indicator (gswitchit)"/>
+        <oaf_attribute name="bugzilla:version" type="string" value="@VERSION@"/>
+        <oaf_attribute name="bugzilla:other_binaries" type="string" value="gnome-keyboard-applet"/>
 
 </oaf_server>
 
