@@ -1,3 +1,8 @@
+2007-03-31  Sergey Udaltsov <svu@gnome.org>
+
+	* Makefile.am, GNOME_KeyboardApplet.server.in.in: improving bugzilla
+	support, http://bugzilla.gnome.org/show_bug.cgi?id=424989
+
 2007-03-19  Sergey Udaltsov <svu@gnome.org>
 
 	* Makefile.am, gswitchit.schemas.in: dropping unneeded and obsolete
